@@ -91,10 +91,14 @@ class Registry
      * Check if we actually have a value to this key.
      *
      * @param $key
+     *   The key we want to check.
+     *
      * @return bool
+     *   If we have a value, or not.
      */
     public function has($key)
     {
-        return empty($data[$key]);
+        return isset($this->data[$key]);
     }
+
 }
